# algo-animator

./: .gitignore  34  CMakeLists.txt  DOCS.md  LICENSE.md  LICENSE.txt  README.md  README.org  README.txt  a.out  algos.c  algos.h  main.c  utils.c  utils.h
repo/: Screencast from 06-29-2023 07:38:33 PM.webm  pause_mode.webm  sequential_mode.webm
src/: algorithms.c  algorithms.h  main.c  utils.c  utils.h
